--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- use to add small icon --><!-- <link rel="shortcut icon" href="./assets/imgs/favicon.ico" type="image/x-icon"> -->
+    <!-- favicon.ico is going to be the small icon-->
     <title>John Wick Trivia Game</title>
 </head>
 
